[tool.poetry]
name = "python-template"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.10"
discord.py = "^2.5.0"  # Use ONLY this one - remove the 'discord' dependency
flask = "^3.0.0"
pytz = "^2024.1"
python-dotenv = "^1.0.0"
aiohttp = "^3.9.0"

[tool.pyright]
useLibraryCodeForTypes = true

[tool.ruff]
select = ['E', 'W', 'F', 'I', 'B', 'C4', 'ARG', 'SIM']
ignore = ['W291', 'W292', 'W293']

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"