[tool.poetry]
name = "python-template"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
packages = [{include = "*.py"}]  # ADD THIS LINE

[tool.poetry.dependencies]
python = "^3.10"
discord = "^2.3.2"
discord-py = "^2.6.2"
pytz = "^2025.2"
flask = "^3.1.2"
python-dotenv = "^1.1.1"
waitress = "^2.1.2"

[tool.pyright]
useLibraryCodeForTypes = true

[tool.ruff]
select = ['E', 'W', 'F', 'I', 'B', 'C4', 'ARG', 'SIM']
ignore = ['W291', 'W292', 'W293']

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"